# ClinRAG

./: .gitignore  ARCHITECTURE.md  Notes.md  README.md  WEEK1_PLAN.md  WORKLOG.md  main.py  pyproject.toml
data/processed/: amlodipine.md  amoxicillin.md  ibuprofen.md  lisinopril.md  metformin.md
notebook/: chunk.py  embed.py  extract.py  generate.py  hybrid.py  scratch.ipynb
