[project]
name = "clinrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.113.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
