[project]
name = "clinrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.54",
    "docling>=2.113.0",
    "faiss-cpu>=1.14.3",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
